--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ keywords: ""
 url: https://HP-Nunes.github.io
 baseurl: ""
 
-# google_analytics: UA-52446115-1
+google_analytics: UA-133442052-1
 # repo: http://github.com/nandomoreirame/end2end
 # disqus_shortname: "nandothemes"
 # disqus_site_shortname: "nandothemes"
