--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   url: https://hpnunes.com/
   github: https://github.com/HP-Nunes
   twitter: https://twitter.com/geocuriosity
-  linkedin: https://www.linkedin.com/in/hadnunpi/
+  linkedin: https://www.linkedin.com/in/hp-nunes/
   devpost: https://devpost.com/HadrienPicq
 
 # Build settings
